# projector

./: .gitignore  .gitmodules  Readme.md  build.xml  license.txt  musicas.db  nbactions.xml  pom.xml
.run/: Generate Headers.run.xml  Package Linux.run.xml  Package MacOS Debug.run.xml  Package Windows Debug.run.xml  Package Windows.run.xml  Run Linux.run.xml  Run MacOS.run.xml  Run Windows.run.xml
core/: pom.xml
core/native/: Makefile  config-debug.c  config-parse.c  config-serialize.c  config.c  debug.c  lib-render.c  loop.c  monitor.c  ogl-loader.c  render-fader.c  render-image.c  render-pixel-unpack-buffer.c  render-preview.c  render-text.c  render-video.c  render-web-view.c  render.c  virtual-screen.c  virtual_screen.c  vs-blend.c  vs-color-corrector.c  vs_color_corrector.c
core/native/glad/: gl.c  gles1.c  gles2.c
core/native/include/: app-render.h  clock.h  color.h  config-debug.h  config-parse.h  config-serialize.h  config-structs.h  config.h  custom-math.h  debug.h  device-capture.h  lib-render.h  loop.h  monitor.h  ndi-input.h  ndi-inputs.h  ndi-loader.h  (+26 more)
docs/window-configurations/: Readme.md
linux/: pom.xml
linux/native/: CMakeLists.txt  CMakePresets.json  src
linux/native/LibNDI/: .gitignore
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
osx/: pom.xml
src/projector/: CenterLabel.java  MainFrame.form  MainFrame.java  Music.java  MusicLoader.java  MusicRepository.java  ProjectionFrame.form  ProjectionFrame.java  ProjectionWindow.java  Projector.java  StringUtils.java  TextFileFilter.java
windows/: pom.xml
(+664 files in other folders)
